SERVER-27831: Push threadsafety responsibility inside of KVCatalog's RecordStore

RecordStores that don't implement document level locking are typically
protected from concurrent reads and writes. However one exception is the
RecordStore passed into KVCatalog. Previously, if
StorageEngine::supportsDocLocking was false, the KVCatalog would use
an additional lock that participated in two phase locking to ensure
reader-writer protection to the underlying record store (and more
specifically, delay releasing until any potential rollbacks were
processed). However, access to the catalog can happen anywhere and this
lock did not have a formally assigned acquisition time relative to other
locks resulting in potential deadlocks.

This patch forces the thread-safety requirement into the RecordStore.
Specifically, EphemeralForTest was changed to acquire a finer grained
lock (i.e: does not participate in two-phase locking) to protect its
internal state. Now that the lock exists inside EphemeralForTest, it is
also able to grab the lock when needed for the onCommit/onRollback
callbacks.