src/mongo/db/storage/kv/kv_catalog_feature_tracker_test.cpp
@@ -79,7 +79,7 @@ public:
             wuow.commit();
         }
 
-        _catalog = stdx::make_unique<KVCatalog>(_rs.get(), true, false, false);
+        _catalog = stdx::make_unique<KVCatalog>(_rs.get(), false, false);
         _catalog->init(opCtx.get());
 
         {
